--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,12 +4,13 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="Ouput_possibility">Організаця лєнти новин</string>
-    <string name="ListOutput">Список</string>
-    <string name="GridOutput">Сітка</string>
+    <string name="column_one">Одна колонка</string>
+    <string name="column_two">Дві колонки</string>
+    <string name="column_three">Три колонки</string>
     <string name="Sorting_possibility">Спосіб сортування</string>
     <string name="Top_Rated">TOP Rated</string>
     <string name="Trending">Trending</string>
-    <string name="setting_searh">Пошук</string>
+    <string name="setting_searh">Наступна сторінка</string>
     <string name="Accept">Застосувати</string>
     <string name="Cancel">Відмінити</string>
 
