--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="setting_searh">Наступна сторінка</string>
     <string name="Accept">Застосувати</string>
     <string name="Cancel">Відмінити</string>
+    <string name="Food">Страва</string>
 
 </resources>
