something go wrong

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,6 @@
     <string name="Accept">Застосувати</string>
     <string name="Cancel">Відмінити</string>
     <string name="Food">Страва</string>
+    <string name="imageSize">Розмір картинки</string>
 
 </resources>
